# shadow-director

./: .dockerignore  .gitignore  Dockerfile  deploy_cloudrun.sh  error.txt  main.py  mock_output.txt  mock_runner.py  pyproject.toml  readme.md  setup_agent_engine.py  soul_profile.json  test_comment_fix.py  test_version_intent.py  verify_docx.py
.agent/rules/: shadow-director.md
.agent/workflows/: deploy_on_wsl.md  setup-google-docs.md  version-update.md
config/: prompts.yaml
docs/: NEXT_STEPS.md  adversarial_critique_spec.md  analysis_file_not_processed.md  bugfix_asyncio_attachment_error.md  bugfix_draft_creation_unpacking_error.md  bugfix_mime_type_error.md  comment_integration_spec.md  competitive_intelligence_spec.md  discord_message_enhancement_spec.md  draft_creation_flow.md  draft_quality_enhancement_spec.md  draft_quality_review_spec.md  font_style_preservation_spec.md  grant_search_flow.md  grant_search_flow_spec.md  playwright_site_explorer_spec.md  pr_agent_spec.md  profile_memory_spec.md  setup_google_docs_api.md  technical_highlights.md  update_profile_spec.md  version_spec.md  vlm_chunk_processing_spec.md
docs/design/: drafter_format_analysis_spec.md  drafter_logic_spec.md  field_by_field_filling_spec.md  file_discovery_enhancement_spec.md  (+8 more)
profiles/: mock_user_phase2_profile.json  test_save_user_2_profile.json  test_user_local_profile.json
scripts/: verify_observer.py
src/: version.py
tests/: manual_test_url_analyzer.py  test_format_field_mapper.py  test_single_cell_table.py  test_url_analyzer.py  test_word_filling.py  verify_memory.py
(+35 files in other folders)
