[project]
name = "shadow-director"
version = "1.9.2"
description = "NPO-SoulSync Agent: The Autonomous Shadow Director"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-storage>=2.10.0",
    "google-genai>=0.1.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "playwright>=1.40.0",
    "nest-asyncio>=1.5.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
